--- a/Joy_Template/Views/Home/Index.cshtml
+++ b/Joy_Template/Views/Home/Index.cshtml
@@ -1,12 +1,10 @@
-﻿@{
+﻿@model Joy_Template.Sources.Users.Ops.RegisterUserOpModel
+
+@{
     ViewData["Title"] = "Home Page"; 
-    var html = ViewData["form"];
-    var table = ViewData["table"];
+    var render = ViewData["render"];
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    @Html.Raw(html)
-    @Html.Raw(table)
+<div class="container">
+    @Html.Raw(render)
 </div>
