--- a/Joy_Template/Views/Shared/_Layout.cshtml
+++ b/Joy_Template/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" asp-action="Users" asp-controller="Home">
                                 <span data-feather="file"></span>
-                                Orders
+                                Users
                             </a>
                         </li>
                         <li class="nav-item">
