--- a/Joy_Template/Views/Shared/_Layout.cshtml
+++ b/Joy_Template/Views/Shared/_Layout.cshtml
@@ -38,6 +38,12 @@
                                 Users
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="app/wizard">
+                                <span data-feather="file"></span>
+                                Wizard
+                            </a>
+                        </li>
                     </ul>
 
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
